{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 24,
  "lineage": "4bee198c-242e-20d0-3437-6a4400ac3373",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.66.5.14",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-06-14T06:22:38.233-07:00",
            "id": "infra-243408/us-central1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-243408",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/regions/us-central1/addresses/reddit-app-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/infra-243408/zones/us-central1-a/instances/reddit-app"
            ]
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-14T06:22:38.400-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/networks/default",
            "priority": 1000,
            "project": "infra-243408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-14T06:22:38.260-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/networks/default",
            "priority": 1000,
            "project": "infra-243408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-06-14T06:22:38.256-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-ssh-default",
            "name": "allow-ssh-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/networks/default",
            "priority": 1000,
            "project": "infra-243408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/firewalls/allow-ssh-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/images/reddit-app",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/infra-243408/zones/us-central1-a/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "4609083824506020172",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:-----BEGIN RSA PRIVATE KEY-----\nMIIEpQIBAAKCAQEAqBWcnVyUhebbAlRz0b+3Qz/bBFqEYhGSZ7VO4QKqmS85p+Qj\nzrUJhzlcjbsb2R6V5BBKXGh5vOKhwTgLGqVPG7Xfr89YrDhbfAAyx7+w6x9MyRxY\n4jfaV9i27FKjdNfuOgOWX0JvVtdeibz9sJlY1FI9cj7I3ufnPyWJNtrKNUlAR7n/\nzo+C7kLjvPDYPfolFtDE3HRspNW7MuDd6BEAzFX9TPVUEUFitasWE07QuZ710uQ3\nETjgS8hHCWy0YrOVxyF+lXkn/xsrONf2uPVT3+9EAURAkIe6RT2iW0uHJYhX31Ch\nxIURKn9ZCHc2TNvk5zTgzwykyx/wUt2Fnx0hzwIDAQABAoIBADbHBElMWKLiv1Ed\nELm0jxb9gnUCws3rCBmAPvqZkdtmRpXuhbTh [...]
            },
            "metadata_fingerprint": "tiLd6FnW1rs=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.5.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/networks/default",
                "network_ip": "10.128.0.44",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-243408/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infra-243408"
              }
            ],
            "project": "infra-243408",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/zones/us-central1-a/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "us-central1-a"
          },
          "depends_on": [
            "google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/images/reddit-db-1560516266",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/infra-243408/zones/us-central1-a/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-db",
            "instance_id": "4637666797501161149",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:-----BEGIN RSA PRIVATE KEY-----\nMIIEpQIBAAKCAQEAqBWcnVyUhebbAlRz0b+3Qz/bBFqEYhGSZ7VO4QKqmS85p+Qj\nzrUJhzlcjbsb2R6V5BBKXGh5vOKhwTgLGqVPG7Xfr89YrDhbfAAyx7+w6x9MyRxY\n4jfaV9i27FKjdNfuOgOWX0JvVtdeibz9sJlY1FI9cj7I3ufnPyWJNtrKNUlAR7n/\nzo+C7kLjvPDYPfolFtDE3HRspNW7MuDd6BEAzFX9TPVUEUFitasWE07QuZ710uQ3\nETjgS8hHCWy0YrOVxyF+lXkn/xsrONf2uPVT3+9EAURAkIe6RT2iW0uHJYhX31Ch\nxIURKn9ZCHc2TNvk5zTgzwykyx/wUt2Fnx0hzwIDAQABAoIBADbHBElMWKLiv1Ed\nELm0jxb9gnUCws3rCBmAPvqZkdtmRpXuhbTh [...]
            },
            "metadata_fingerprint": "tiLd6FnW1rs=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.184.13.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-243408/global/networks/default",
                "network_ip": "10.128.0.45",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-243408/regions/us-central1/subnetworks/default",
                "subnetwork_project": "infra-243408"
              }
            ],
            "project": "infra-243408",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-243408/zones/us-central1-a/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}